- Add function (NBSPredict_predict) to predict novel data using the trained model. 
- Refactor several functions to make them compatible for the novel data prediction function.
- The symmetry of the connectivity matrices is now automatically checked. 
- Fix minor GUI issue in the results viewer window.
- Fix edge weight issue when MAD, MSE or RMSE chosen. 
- 

## [v1.0.0-beta.6] - 09.01.2022
- NBS-Predict is now in v1.0.0-beta.6
- User can specify number of CPU cores to use. 
- Fix minor bug in Elastic Net function.
- Add progress bar for loading connectivity matrices on the command window.
- Minor change in loadData function to fasten .csv loading.
- Add balanced accuracy metric to measure accuracy in imbalanced datasets.
- Add permutation testing to compare model performance against null-distribution.

## [v1.0.0-beta.5] - 05.11.2021 
- NBS-Predict is now in v1.0.0-beta.5
- NBS-Predict has now Workspace!
- GUI history has been reactivated!
- Fix bug in confusion matrix visualization.
- Fix minor bugs in GUI.
- Update user MANUAL.
- Fix compatibility issues.

## [v1.0.0-beta.4] - 28.10.2021
- NBS-Predict is now in v1.0.0-beta.4
- This version fixes the "check_classifiction function is not found" error.

## [v1.0.0-beta.3] - 23.10.2021
- NBS-Predict is now in v1.0.0-beta.3 
- This version provides hotfixes for a few bugs found in v1.0.0-beta2.
- Fix compatibility issues in the NBS-Predict visualization window. 
- GUI history has been deactivated until the following versions due to unexpected crashes; thus, parameters entered in the setup interface will not be saved for later use!

## [v1.0.0-beta2] - 21.10.2021
- NBS-Predict is now in v1.0.0-beta2.
- Reorganize and clarify function comments.
- Add link for the sample data.
- Update user MANUAL. 
- Add wait/progress bar to the NBS-Predict visualization window.